--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -11,4 +11,8 @@ section {
 	margin-top: 90px;
 	padding-top: 90px;
 	border-top: 1px solid rgba(225, 225, 225, 0.15);
+	@include mobile {
+		margin-top: 45px;
+		padding-top: 45px;
+	}
 }
