add contact section and footer

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ hr {
 }
 
 pre {
-  font-family: monospace, monospace;
+  font-family: var(--ff), monospace;
   font-size: 1em;
 }
 
@@ -153,7 +153,7 @@ body {
 }
 
 .container {
-  max-width: 1161px;
+  max-width: 1181px;
   padding: 20px;
   margin-inline: auto;
 }
@@ -162,6 +162,12 @@ section {
   margin-top: 90px;
   padding-top: 90px;
   border-top: 1px solid rgba(225, 225, 225, 0.15);
+}
+@media (max-width: 992px) {
+  section {
+    margin-top: 65px;
+    padding-top: 65px;
+  }
 }
 @media (max-width: 576px) {
   section {
@@ -207,9 +213,9 @@ section {
 }
 
 .col-3 {
-  width: 33.33%;
+  width: calc(33.33% - 26px);
 }
-@media (max-width: 576px) {
+@media (max-width: 992px) {
   .col-3 {
     width: 100%;
   }
@@ -281,7 +287,9 @@ section {
   font-weight: 500;
   color: var(--c-text-white);
   transition: var(--transition);
-  max-width: 165px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  text-align: center;
 }
 
 ._primary {
@@ -302,12 +310,44 @@ section {
   background: var(--services-bg);
   padding: 32px;
   display: flex;
+  border-radius: 8px;
+}
+.item:hover {
+  background: #32302e;
+  transition: var(--transition);
 }
 
-.text {
+.text-type1 {
   color: var(--c-text-white);
   font-size: 16px;
   line-height: 160%;
+  font-weight: 400;
+}
+
+.text-type2 {
+  color: var(--c-text-secondary);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+.text-type3 {
+  color: var(--c-text-white);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.link {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  color: var(--c-text-white);
+  transition: var(--transition);
+}
+.link._active, .link:hover {
+  color: var(--c-primary);
 }
 
 .header {
@@ -334,6 +374,7 @@ section {
     justify-content: center;
     transform: translateX(-120%);
     transition: var(--transition);
+    z-index: 4;
   }
 }
 .header__list._active {
@@ -345,15 +386,10 @@ section {
   right: 40px;
   color: var(--c-text-white);
 }
-.header__link {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
-  color: var(--c-text-white);
-  transition: var(--transition);
-}
-.header__link._active, .header__link:hover {
-  color: var(--c-primary);
+@media (max-width: 992px) {
+  .header__link {
+    font-size: 25px;
+  }
 }
 
 .icon-menu,
@@ -365,6 +401,7 @@ section {
   .icon-menu,
   .icon-close {
     display: inline-block;
+    color: var(--c-text-white);
   }
 }
 
@@ -417,9 +454,6 @@ section {
 }
 .main__list {
   display: flex;
-  font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
   gap: 27px;
 }
 @media (max-width: 1200px) {
@@ -546,7 +580,6 @@ section {
 }
 
 .customers-list__item {
-  border-radius: 8px;
   flex-direction: column;
   gap: 28px;
 }
@@ -564,7 +597,109 @@ section {
 }
 .customers-list__name {
   font-weight: 500;
+  font-size: 18px;
 }
 .customers-list__position {
   color: var(--c-primary);
+  font-size: 18px;
+}
+
+@media (max-width: 992px) {
+  .pricing-info {
+    justify-content: center;
+  }
+}
+.pricing-info__col {
+  display: flex;
+  flex-direction: column;
+}
+.pricing-info__part1 {
+  border-bottom: 1px solid rgba(225, 225, 225, 0.15);
+}
+.pricing-info__title {
+  font-size: 16px;
+  margin-bottom: 14px;
+}
+.pricing-info__price {
+  font-weight: 500;
+  margin-bottom: 14px;
+}
+.pricing-info__desc {
+  font-size: 14px;
+  margin-bottom: 35px;
+}
+.pricing-info__btn {
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+.pricing-info__list {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+}
+.pricing-info__item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  color: #A19A8B;
+  line-height: normal;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  width: 100%;
+  padding: 14px;
+  display: inline-block;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  background: transparent;
+  margin-bottom: 24px;
+  color: var(--c-text-white);
+}
+
+textarea {
+  min-height: 120px;
+}
+
+.footer__container {
+  margin-top: 103px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 54px;
+  padding-bottom: 54px;
+  background: var(--services-bg);
+}
+@media (max-width: 992px) {
+  .footer__container {
+    flex-direction: column-reverse;
+    gap: 34px;
+    margin-top: 64px;
+  }
+}
+@media (max-width: 576px) {
+  .footer__container {
+    padding: 34px;
+    margin-top: 45px;
+  }
+}
+.footer__copyright {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  color: var(--c-text-white);
+}
+.footer span:last-child {
+  color: var(--c-primary);
+}
+.footer__list {
+  display: flex;
+  align-items: center;
+  gap: 34px;
+}
+@media (max-width: 576px) {
+  .footer__list {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
