--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,3 +17,6 @@
 @import 'sections/services';
 @import 'sections/portfolio';
 @import 'sections/customers';
+@import 'sections/pricing';
+@import 'sections/contact';
+@import 'sections/footer';
