--- a/scss/sections/_common.scss
+++ b/scss/sections/_common.scss
@@ -24,27 +24,58 @@
   font-weight: 500;
   color: var(--c-text-white);
   transition: var(--transition);
-  max-width: 165px;
+  max-width: fit-content;
+  text-align: center;
 }
 ._primary {
   background: var(--c-primary);
   &:hover {
-      background: transparent;
+    background: transparent;
   }
 }
 ._secondary {
   background: transparent;
   &:hover {
-      background: var(--c-primary);
+    background: var(--c-primary);
   }
 }
 .item {
-	background: var(--services-bg);
-    padding: 32px;
-	display: flex;
+  background: var(--services-bg);
+  padding: 32px;
+  display: flex;
+  border-radius: 8px;
+  &:hover {
+    background: lighten(#2D2B29, 2%);
+    transition: var(--transition);
+  }
 }
-.text {
-	color: var(--c-text-white);
-    font-size: 16px;
-    line-height: 160%;
+.text-type1 {
+  color: var(--c-text-white);
+  font-size: 16px;
+  line-height: 160%;
+  font-weight: 400;
+}
+.text-type2 {
+  color: var(--c-text-secondary);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+.text-type3 {
+  color: var(--c-text-white);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.link {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  color: var(--c-text-white);
+  transition: var(--transition);
+  &._active,
+  &:hover {
+    color: var(--c-primary);
+  }
 }
